# QUB-photometry-pipeline

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
Reference/: CITATION.cff  INT_pipeline.py  LICENSE  README.md
Regions/: TOI_1516_targets.reg  TOI_1516_targets2.reg
config/: example_config.json
qub_pipeline/: __init__.py  cli.py  photometry.py  photometry2.py  reduction.py  runner.py  utils.py
qub_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: qub_photometry.py  qub_reduction.py  run_pipeline.py
